GROOVY-1915: Should use Integer.valueOf() instead of new Integer(), where appropriate (too eager for this file)
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@11949 a5544e8c-8a19-0410-ba12-f9af4593a198