@@ -307,7 +307,7 @@ public class BytecodeHelper implements Opcodes {
                 } else if (value >= Short.MIN_VALUE && value <= Short.MAX_VALUE) {
                     mv.visitIntInsn(SIPUSH, value);
                 } else {
-                    mv.visitLdcInsn(new Integer(value));
+                    mv.visitLdcInsn(Integer.valueOf(value));
                 }
         }
     }
